<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.example.android.justjava.MainActivity">

    <TextView
        android:id="@+id/quantity_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/quantity_header_text"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <Button
        android:id="@+id/increment_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="increment"
        android:text="@string/plus"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_text"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/decrement_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="decrement"
        android:text="@string/minus"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/price_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16sp"
        android:text="@string/price_header_text"
        android:textAllCaps="true"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_text"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/order_button_text"
        android:textAllCaps="true"
        android:textSize="16sp" />

</LinearLayout>
